--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-stage-3": "6.24.1",
     "babel-register": "6.26.0",
     "dotenv": "^10.0.0",
+    "identicon.js": "^2.3.3",
     "react": "16.8.4",
     "react-dom": "16.8.4",
     "react-scripts": "2.1.3",
